# cadence

./: .env.example  .gitignore  .pre-commit-config.yaml  API Reference.dc.html  Activities.dc.html  Activity Analysis.dc.html  Athlete.dc.html  CHANGES.md  Calendar.dc.html  Coach Roster.dc.html  Dashboard.dc.html  Data Dictionary.dc.html  Data Schema.dc.html  Design Brief.dc.html  Gear.dc.html  Import.dc.html  Login.dc.html  Notifications.dc.html  Preferences.dc.html  README.md  SCHEMA_COMPARISON.md  Workout Designer.dc.html  docker-compose.dev.yml  docker-compose.yml  openapi.yaml
.github/: dependabot.yml
.github/workflows/: codeql.yml  frontend.yml  java-tests.yml  lint.yml  tests.yml
backend/: .dockerignore  Dockerfile  README.md  conftest.py  entrypoint.sh  pyproject.toml  pytest.ini
backend/accounts/: admin.py  models.py  serializers.py  tests.py  tokens.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py  0002_user_handle_personalaccesstoken_userrelationship_and_more.py
backend/activities/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/activities/migrations/: 0001_initial.py  0002_besteffort_durationcurve_record_and_more.py  0003_record_hypertable.py  0004_activity_avg_air_temp_activity_avg_humidity_and_more.py  0005_activity_aerobic_training_effect_and_more.py  0006_activity_parent_activity_alter_activity_sport.py  0007_activity_primary_activity.py  0008_activity_device.py
backend/activities/tests/: helpers.py  test_activity_detail.py  test_activity_list.py  test_curves.py  test_duplicates.py  test_laps.py  test_streams.py  test_tags.py
backend/athletes/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py  zones.py
backend/athletes/migrations/: 0001_initial.py
backend/authn/: jwt_utils.py  oauth_utils.py  tests.py  token_generators.py  urls.py  views.py
backend/config/: settings.py  settings_test.py  urls.py
backend/core/: auth_context.py  authentication.py  derived.py  exceptions.py  models.py  pagination.py  permissions.py  tests.py  views.py
backend/core/cql/: __init__.py  compiler.py  fields.py  parser.py  tests.py  tokenizer.py
backend/gear/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/gear/migrations/: 0001_initial.py  0002_seed_shoe_catalog.py  0003_shoemodel_created_by.py
backend/scheduling/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/scheduling/migrations/: 0001_initial.py
backend/uploads/: admin.py  fixtures_helpers.py  models.py  processing.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
backend/uploads/migrations/: 0001_initial.py  0002_alter_upload_status.py
backend/uploads/parsers/: __init__.py  fit.py  gpx.py  tcx.py  types.py  utils.py
backend/uploads/tests/: helpers.py  test_batch_upload_view.py  test_best_efforts_and_matching.py  test_parsers.py  test_processing_math.py  test_upload_view.py
backend/uploads/tests_fixtures/: cycling_with_scaled_core_sensor_fields.fit  multisport.fit
backend/webhooks/: admin.py  events.py  models.py  secrets.py  serializers.py  tasks.py  tests.py  urls.py  views.py
backend/webhooks/migrations/: 0001_initial.py
backend/workouts/: admin.py  calculations.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/workouts/migrations/: 0001_initial.py
backend_java/: .env.example  .gitignore  Dockerfile  README.md  build.gradle.kts  docker-compose.yml  entrypoint.sh  settings.gradle.kts
backend_java/src/main/resources/: application.yml
backend_java/src/main/resources/db/migration/: V10__records.sql  V11__record_hypertable.sql  V12__duration_curves_and_best_efforts.sql  V13__scheduling.sql  V14__uploads.sql  V15__spring_batch_schema.sql  V16__webhooks.sql  V17__environmental_telemetry.sql  V18__training_effect.sql  V19__seed_shoe_catalog.sql  V1__extensions_and_users.sql  V20__shoemodel_created_by.sql  V21__multisport_parent_link.sql  V22__duplicate_activity_link.sql  V23__activity_device.sql  V24__upload_skipped_status.sql  V2__sharing.sql  V3__tokens.sql  V4__oauth_authorizations.sql  V5__athlete_zones.sql  V6__gear_catalog.sql  (+3 more)
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: activities.ts  athletes.ts  auth.ts  client.ts  gear.ts  scheduling.ts  shares.ts  tokens.ts  types.ts  uploads.ts  workouts.ts
frontend/src/auth/: AuthContext.tsx  RequireAuth.tsx
frontend/src/components/: Card.tsx  StatCell.tsx
frontend/src/layout/: AppShell.tsx  ThemeToggle.tsx
frontend/src/lib/: calendar.test.ts  calendar.ts  format.test.ts  format.ts  gear.ts  hrZones.test.ts  hrZones.ts  sportColors.ts  zones.test.ts  zones.ts
frontend/src/screens/: ActivitiesScreen.tsx  ActivityAnalysisScreen.tsx  CalendarScreen.tsx  DashboardScreen.tsx  GearScreen.tsx  ImportScreen.tsx  LoginScreen.tsx  PreferencesScreen.tsx  WorkoutDesignerScreen.tsx
frontend/src/screens/activities/: ActivityCard.tsx  ZoneBar.tsx
frontend/src/screens/activity-analysis/: CurvesTab.tsx  DuplicatesCard.tsx  Header.tsx  HydrationBlock.tsx  LapsTab.tsx  MultisportLegs.tsx  MultisportStreamChart.tsx  RouteMap.tsx  StatRow.tsx  StreamChart.tsx  ZonesTab.tsx
frontend/src/screens/calendar/: ScheduleModal.tsx
frontend/src/screens/dashboard/: BestEffortsRow.tsx  CoachingSection.tsx  PmcChart.tsx  RecentActivitiesTable.tsx  SportDistribution.tsx  StatCardsRow.tsx  WeeklyVolumeChart.tsx
frontend/src/screens/gear/: AddShoeForm.tsx  BikeCard.tsx  BikesSection.tsx  ComponentRow.tsx  ShoeCard.tsx  ShoesSection.tsx
frontend/src/screens/import/: BatchStatus.tsx  UploadStatus.tsx  usePolling.ts
frontend/src/screens/preferences/: HrZoneGenerator.tsx  ProfileTab.tsx  SharingTab.tsx  TokensTab.tsx  ZoneEditorTab.tsx
frontend/src/screens/workouts/: StepRow.tsx  WorkoutEditor.tsx
frontend/src/styles/: global.css  theme.ts  themes.css
scripts/: restart-docker.sh
(+310 files in other folders)
