[project]
name = "cadence-backend"
version = "0.1.0"
description = "Cadence training platform REST API"
requires-python = ">=3.12,<3.13"
dependencies = [
    "django==5.0.9",
    "djangorestframework==3.15.2",
    "django-oauth-toolkit==2.4.0",
    "django-cors-headers==4.4.0",
    "pyjwt==2.9.0",
    "cryptography==43.0.1",
    "celery==5.4.0",
    "redis==5.0.8",
    "fitparse==1.2.0",
    "gpxpy==1.6.2",
    "lxml==5.3.0",
    "requests==2.34.2",
    "psycopg[binary]==3.2.2",
    "gunicorn==23.0.0",
    "whitenoise==6.7.0",
    "drf-spectacular==0.27.2",
    "python-dotenv==1.0.1",
]

[dependency-groups]
dev = [
    "pytest==8.3.3",
    "pytest-django==4.9.0",
    "factory-boy==3.3.1",
    "ruff>=0.15.18",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 120
extend-exclude = ["*/migrations/*.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "DJ"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"*/settings*.py" = ["F403", "F405"]

[tool.ruff.lint.isort]
known-first-party = [
    "config",
    "core",
    "accounts",
    "authn",
    "athletes",
    "activities",
    "uploads",
    "workouts",
    "scheduling",
    "gear",
    "webhooks",
]
