[project]
name = "cadence-backend"
version = "0.1.0"
description = "Cadence training platform REST API"
requires-python = ">=3.12,<3.13"
dependencies = [
    "django==5.0.9",
    "djangorestframework==3.15.2",
    "django-oauth-toolkit==2.4.0",
    "django-cors-headers==4.4.0",
    "pyjwt==2.9.0",
    "cryptography==43.0.1",
    "celery==5.4.0",
    "redis==5.0.8",
    "fitparse==1.2.0",
    "gpxpy==1.6.2",
    "lxml==5.3.0",
    "requests==2.34.2",
    "psycopg[binary]==3.2.2",
    "gunicorn==23.0.0",
    "whitenoise==6.7.0",
    "drf-spectacular==0.27.2",
    "python-dotenv==1.0.1",
]

[dependency-groups]
dev = [
    "pytest==8.3.3",
    "pytest-django==4.9.0",
    "factory-boy==3.3.1",
    "ruff>=0.15.18",
    "mypy>=2.1.0",
    "django-stubs>=6.0.5",
    "djangorestframework-stubs>=3.17.0",
    "types-requests>=2.33.0.20260518",
    "lxml-stubs>=0.5.1",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 120
extend-exclude = ["*/migrations/*.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "DJ"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"*/settings*.py" = ["F403", "F405"]

[tool.ruff.lint.isort]
known-first-party = [
    "config",
    "core",
    "accounts",
    "authn",
    "athletes",
    "activities",
    "uploads",
    "workouts",
    "scheduling",
    "gear",
    "webhooks",
]

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]
exclude = ["/migrations/"]
mypy_path = "."
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
warn_return_any = true
strict_equality = true

[tool.django-stubs]
django_settings_module = "config.settings"

[[tool.mypy.overrides]]
module = ["celery.*", "fitparse.*", "oauth2_provider.*"]
ignore_missing_imports = true

# Test modules are still type-checked, just not required to annotate every
# def -- full annotation coverage pays off far more in application code than
# in test bodies.
[[tool.mypy.overrides]]
module = ["*.tests", "*.tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false
